# visualizr

./: .gitignore  Cargo.toml  README.md
bindingsr/: Cargo.toml  README.md  wrapper.h
bindingsr/src/: bindings.rs  lib.rs
commonr/: Cargo.toml  README.md
commonr/src/: data.rs  lib.rs  net.rs
inspectr/: .gitignore  DESCRIPTION  NAMESPACE
inspectr/R/: extendr-wrappers.R  utils.R
inspectr/man/: visualize.Rd
inspectr/src/: Makevars  Makevars.win  entrypoint.c
inspectr/src/rust/: Cargo.toml
inspectr/src/rust/src/: lib.rs
visualizr/: Cargo.toml  README.md
visualizr/src/: main.rs
