[package]
name = 'inspectr'
version = '0.1.0'
edition = '2021'
authors = ["Martin Taibr <taibr.martin@gmail.com>"]
license = "AGPL-3.0-or-later"

[lib]
crate-type = ['staticlib']
name = 'inspectr'

[dependencies]
bindingsr = { path = "../../../bindingsr" }
commonr = { path = "../../../commonr" }
extendr-api = '0.2.0'
#extendr-api = { git = "https://github.com/extendr/extendr", rev = "1d2e87ed49a3e0e5c1a1a2df58140b3f7824fb87" }
